build/log/idf_py_stderr_output_1089416
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c: In function 'led_state':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:88:29: error: expected ';' before 'break'
   88 |             ets_delay_us(10)
      |                             ^
      |                             ;
   89 |             break;
      |             ~~~~~            
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:93:29: error: expected ';' before 'break'
   93 |             ets_delay_us(10)
      |                             ^
      |                             ;
   94 |             break;
      |             ~~~~~            
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:88:13: warning: this statement may fall through [-Wimplicit-fallthrough=]
   88 |             ets_delay_us(10)
      |             ^~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:91:9: note: here
   91 |         case 0x04: // RED LED
      |         ^~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:93:13: warning: this statement may fall through [-Wimplicit-fallthrough=]
   93 |             ets_delay_us(10)
      |             ^~~~~~~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/dvr/ledconf.c:96:9: note: here
   96 |         case 0x08: // RESET to GREEN
      |         ^~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:154: esp-idf/main/CMakeFiles/__idf_main.dir/dvr/ledconf.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
